--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -34,6 +34,7 @@ $mainColor: #000;
 $darkColor: #9356DC ;
 $lightColor: #FF79DA;
 $greenColor: #99E2D0;
+$whiteColor: #fff;
 
 //</ПЕРЕМЕННЫЕ>===========================================================================================================
 
@@ -63,8 +64,8 @@ body {
 //<ОСНОВНАЯ СЕТКА>===========================================================================================================
 ._container {
 	max-width: $maxWidthContainer + px;
-	margin: 0 auto;
-	@media (max-width: $md1 + px) {
+	margin: 0 80px;
+	@media (max-width: $md1+px) {
 		max-width: 970px;
 	}
 	@media (max-width: $md2+px) {
@@ -72,7 +73,7 @@ body {
 	}
 	@media (max-width: $md3+px) {
 		max-width: none;
-		padding: 0 10px;
+		margin: 0 18px;
 	}
 }
 //</ОСНОВНАЯ СЕТКА>===========================================================================================================
@@ -83,9 +84,6 @@ body {
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ UI СТИЛЕЙ, ФОРМ И ГОТОВЫХ КЛАССОВ>====================================================================================================
 
 //<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
-//@import "datepicker";
-//@import "lightgallery";
-//@import "pagging";
 @import "header";
 @import "footer";
 @import "home";
