--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,5 +1,49 @@
-footer {
+.footer {
+  max-height: 196px;
+  background-color: $mainColor;
+  color: $whiteColor;
+  a {
+		color: $whiteColor;
+    &:hover {
+      color: $greenColor;
+    }
+  }
 }
-//====================================================================================================
-
+.footer__container {
+  max-height: 196px;
+  min-height: 60px;
+  line-height: 120%;
+  @include adaptiv-value("font-size", 18, 14, 1);
+}
+.menu-footer__list {
+  display: flex;
+  align-items: center;
+  padding: 4px 4px 10px 8px;
+  margin: 26px 0;
+  gap: 10px;
+  justify-content: space-around;
+  @media (max-width: $md3+px) {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: start;
+  }
+}
+.menu-footer__logo {
+  width: 150px;
+  height: 36px;
+  @media (max-width: $md3+px) {
+    width: 100px;
+    height: 24px;
+    margin-bottom: 20px;
+  }
+}
+.footer_link {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.footer_svg {
+  width: 16px;
+  height: 16px;
+}
 //====================================================================================================
