--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -1,3 +1,9 @@
 //====================================================================================================
-
+img {
+  width: 100%;
+  height: 100%;
+  &:hover {
+    opacity: 0.5;
+  }
+}
 //====================================================================================================
