--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,24 +1,14 @@
 @use "sass:math";
-//<МИКСИНЫ>===============================================================================================
 @import "mixins";
-//</МИКСИНЫ>===============================================================================================
 
-//<ШРИФТЫ>===============================================================================================
-
-//<Подключаем шрифты>=======================================================================================
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
-//</Подключаем шрифты>=======================================================================================
-
-//<Шрифт по умолчанию>==========================================================================================
 $fontFamily: 'Roboto';
+$fontFamilyTitle: 'Shrikhand';
 $fontSize: 16px;
 $fontSizeTitle: 18px;
 $fontWeightTitle: 700;
-//</Шрифт по умолчанию>==========================================================================================
+$fontWeightLight: 100;
 
-//</ШРИФТЫ>=======================================================================================================
-
-//<ПЕРЕМЕННЫЕ>==========================================================================================================
+//<VARIABLES>==========================================================================================================
 $minWidth: 320px;
 $maxWidth: 1440;
 $maxWidthContainer: 1340;
@@ -26,6 +16,7 @@ $md1: $maxWidthContainer + 12;
 $md2: 991.98;
 $md3: 767.98;
 $md4: 479.98;
+$md5: 370;
 
 $mainColor: #000;
 $darkColor: #9356DC;
@@ -37,7 +28,7 @@ $greyColor: #f2f0f0;
 $darkGreyColor: #dddcdc;
 $hoverVioletColor: #d7c3f1;
 
-//</ПЕРЕМЕННЫЕ>===========================================================================================================
+//</VARIABLES>===========================================================================================================
 
 //<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===============================================================================================
 @import "null";
@@ -90,13 +81,15 @@ body {
 @import "home";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 
-//<ОСНОВНОЙ БЛОК>====================================================================================================
+//<main>====================================================================================================
 .page {
 	flex: 1 1 auto;
 }
 //===================================================================================================================================
 
-//</ОСНОВНОЙ БЛОК>====================================================================================================
+//</main>====================================================================================================
+//LANDING STYLES (index.html)
+//==================================================================================================================
 .search {
 	display: flex;
 	justify-content: center;
@@ -144,18 +137,8 @@ body {
 		font-weight: 300;
 	}
 	&_btn {
-		height: 50px;
 		width: 220px;
 		margin-top: 28px;
-		border-radius: 50px;
-		font-weight: 400;
-		color: $whiteColor;
-		background-image: linear-gradient(to right, $lightColor 0%, #d330e9  51%, #e796f7  100%);
-		&:hover {
-			background-position: right center; /* change the direction of the change here */
-			color: $greenColor;
-			text-decoration: none;
-		}
 	}
 }
 //==================================================================================================================
@@ -277,25 +260,12 @@ body {
 			grid-row: 2;
 		}
 		&__svg {
-			height: 23px;
 			grid-column: 2;
   		grid-row: 1 / 3;
-			align-self: center;
-			opacity: 1;
 			&-hov {
-				height: 23px;
 				grid-column: 2;
 				grid-row: 1 / 3;
-				align-self: center;
-				opacity: 0;
 			}
-			&:hover {
-				visibility: hidden;
-				filter: invert(40%) sepia(81%) saturate(2746%) hue-rotate(243deg) brightness(91%) contrast(89%);
-				&-hov {
-					opacity: 1;
-				}
-			}			
 		}
 	}
 }
