--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -15,6 +15,18 @@
 		@media (max-width: $md3+px) {
 			justify-content: center;
 		}
+		&__pages {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			max-width: 1294px;
+			height: 60px;
+			padding: 0px 10px;
+			margin: 0px auto;
+			align-items: center;
+			@media (max-width:$md3+px){
+				grid-template-columns: 1fr 2fr;
+			}
+		}
 	}
 	&_svg {
 		height: 32px;
