--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -18,9 +18,9 @@
 	color: $whiteColor;
 	background-image: linear-gradient(to right, $lightColor 0%, #d330e9  51%, #e796f7  100%);
 	&:hover {
-		background-position: right center; /* change the direction of the change here */
+		background-position: right center; 
 		text-decoration: none;
-		box-shadow: 0px 0px 1px $greyColor;
+		box-shadow: 0px 0px 4px $darkGreyColor;
 		animation: fill 0.6s ease-in-out;
 		background: linear-gradient(to left, $lightColor 0%, #e897f3  51%, #e7b3f3  100%);
 	}
