--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,8 +1,8 @@
 @use "sass:math";
 @import "mixins";
 
-$fontFamily: 'Roboto';
-$fontFamilyTitle: 'Shrikhand';
+$fontFamily: 'Roboto', sans-serif;
+$fontFamilyTitle: 'Shrikhand', cursive;
 $fontSize: 16px;
 $fontSizeTitle: 18px;
 $fontWeightTitle: 700;
@@ -27,10 +27,8 @@ $whiteColor: #fff;
 $greyColor: #f2f0f0;
 $darkGreyColor: #dddcdc;
 $hoverVioletColor: #d7c3f1;
-
 //</VARIABLES>===========================================================================================================
-
-//<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===============================================================================================
+//<null>===============================================================================================
 @import "null";
 body {
 	color: $mainColor;
@@ -39,9 +37,8 @@ body {
 		overflow: hidden;
 	}
 }
-//</ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===============================================================================================
-
-//<ОБОЛОЧКА>===========================================================================================================
+//</null>===============================================================================================
+//<WRAPPER>===========================================================================================================
 .wrapper {
 	width: 100%;
 	min-height: 100%;
@@ -51,9 +48,7 @@ body {
 	&._loaded {
 	}
 }
-//</ОБОЛОЧКА>===========================================================================================================
-
-//<ОСНОВНАЯ СЕТКА>===========================================================================================================
+//<CONTAINER>===========================================================================================================
 ._container {
 	max-width: $maxWidthContainer + px;
 	margin: 0 80px;
@@ -68,26 +63,23 @@ body {
 		margin: 0 18px;
 	}
 }
-//</ОСНОВНАЯ СЕТКА>===========================================================================================================
-
-//<ПОДКЛЮЧЕНИЕ ФАЙЛОВ UI СТИЛЕЙ, ФОРМ И ГОТОВЫХ КЛАССОВ>====================================================================================================
+//====================================================================================================
 @import "forms";
 @import "ui";
-//</ПОДКЛЮЧЕНИЕ ФАЙЛОВ UI СТИЛЕЙ, ФОРМ И ГОТОВЫХ КЛАССОВ>====================================================================================================
-
-//<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
+@import "fonts";
+//====================================================================================================
 @import "header";
 @import "footer";
 @import "home";
-//</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
+//====================================================================================================
 
 //<main>====================================================================================================
 .page {
 	flex: 1 1 auto;
 }
 //===================================================================================================================================
-
 //</main>====================================================================================================
+
 //LANDING STYLES (index.html)
 //==================================================================================================================
 .search {
