--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -43,13 +43,13 @@
   grid-row: 3;
 }
 ._animation_1{
-  animation: list__drop linear 0.6s forwards;  
+  animation: list__drop linear 1s forwards;  
 }
 ._animation_2 {
-  animation: list__drop linear 0.8s forwards; 
+  animation: list__drop linear 1.2s forwards; 
 }
 ._animation_3{
-  animation: list__drop linear 1s forwards;
+  animation: list__drop linear 1.4s forwards;
 }
 //==========================================
 .card {
@@ -72,12 +72,11 @@
     z-index: 2;
     background-color: $greyColor;
     border-radius: 36px 36px 0 0;
-    padding: 10px 0;
+    padding: 34px 0;
   }
   &__title {
     align-self: center;
     font-size: 22px;
-    font-style: italic;
     font-family: $fontFamilyTitle;
   }
 }
@@ -151,7 +150,9 @@
         font-size: 20px;
         align-self: center;
         color: lighten($greenColor, 40);
-        opacity: 0;
+        animation-name: slide__check__reverse;
+        animation-duration: 1s;
+        transition-duration: 1s;
       }
     }
     &:hover, &:focus, &:active {
