--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -16,13 +16,85 @@
 	font-weight: 400;
 	line-height: 120%;
 	color: $whiteColor;
+	box-shadow: 4px 4px 4px $greyColor;
 	background-image: linear-gradient(to right, $lightColor 0%, #d330e9  51%, #e796f7  100%);
 	&:hover {
+		cursor: pointer;
 		background-position: right center; 
 		text-decoration: none;
-		box-shadow: 0px 0px 4px $darkGreyColor;
-		animation: fill 0.6s ease-in-out;
+		box-shadow: 4px 4px 4px $darkGreyColor;
+		animation: fill 1s ease-in-out;
 		background: linear-gradient(to left, $lightColor 0%, #e897f3  51%, #e7b3f3  100%);
 	}
 }
 //</BUTTONS>====================================================================================================
+
+//<LOADER>====================================================================================================
+.loader {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	background: $darkGreyColor;
+	color: $greenColor;
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 10;
+	pointer-events: none;
+	animation: loader 1s ease-in-out 1.5s forwards;
+	.lds-ellipsis {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		position: relative;
+		width: 80px;
+		height: 80px;
+		border-radius: 50%;
+		border-top: 8px solid $darkColor;
+		border-bottom: 8px solid $greenColor;
+		border-left: 8px solid $mainColor;
+		border-right: 8px solid $hoverVioletColor;
+	}
+	.lds-ellipsis:after {
+		content: "";
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		right: 0;
+		left: 0;
+		border-radius: 50%;
+		border: 8px solid $whiteColor;
+		border-bottom-color: $lightColor;
+		animation: loader__rotate 1.2s linear infinite;
+	}
+}
+//<LOADING DEMO>====================================================================================================
+@keyframes loader__rotate {
+	from {
+			transform: rotate(0deg);
+	}
+	to {
+			transform: rotate(360deg);
+	}
+}
+@keyframes loader {
+	0% {
+			opacity: 1;
+	}
+	50% {
+			opacity: 0.8;
+	}
+	75% {
+			opacity: 0.5;
+	}
+	90% {
+			opacity: 0.2;
+	}
+	100% {
+			opacity: 0;
+	}
+}
+//</LOADING DEMO>====================================================================================================
