animation text, heart, logo-header center

--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -4,8 +4,10 @@
   color: $whiteColor;
   a {
 		color: $whiteColor;
-    &:hover {
-      color: $greenColor;
+    @media (any-hover: hover) {
+      &:hover {
+        color: $greenColor;
+      }
     }
   }
   &__container {
