--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -174,11 +174,13 @@ body {
 	&_svg {
 		width: 16px;
 	}
-	&:hover {
-		background-color: $hoverVioletColor;
-		.fonction__btn_svg {
-			filter: invert(40%) sepia(81%) saturate(2746%) hue-rotate(243deg) brightness(91%) contrast(89%);
-			opacity: 0.9;
+	@media (any-hover: hover) {
+		&:hover {
+			background-color: $hoverVioletColor;
+			.fonction__btn_svg {
+				filter: invert(40%) sepia(81%) saturate(2746%) hue-rotate(243deg) brightness(91%) contrast(89%);
+				opacity: 0.9;
+			}
 		}
 	}
 }
@@ -226,10 +228,7 @@ body {
 			object-fit: cover;
 			border-radius: 20px 20px 0 0;
 			grid-column: 1/3;
-			grid-row: 1/4;
-			&:hover {
-				opacity: 0.9;
-			}			
+			grid-row: 1/4;	
 		}
 		&__label {
 			margin-right: -92px;
@@ -252,6 +251,19 @@ body {
   	grid-auto-flow: row;
 		height: 76px;
 		padding-left: 14px;
+		@media (any-hover: hover) {
+      &:hover {
+        .heart{
+          animation: heart__hover 2s forwards;
+          display: inline-block;
+          opacity: 1;
+          background-clip: text;
+          -webkit-background-clip: text;
+          color: transparent;
+          font-weight: bold;
+        }			
+      }
+    }
 		&__title {
 			font-weight: $fontWeightTitle;
 			grid-column: 1;
