--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -3,17 +3,16 @@ img {
   width: 100%;
   height: 100%;
 	object-fit: contain;
-  &:hover {
-    opacity: 0.5;
-  }
 }
 a {
   color: $mainColor;
   text-decoration: none;
-  &:hover {
-    transition: color 0.3s ease 0s;
-    color: $greenColor;
-  }
+	@media (any-hover: hover) {		
+		&:hover {
+			transition: color 0.3s ease 0s;
+			color: $greenColor;
+		}
+	}
 }
 //==========================
 ._title_h1 {
@@ -29,19 +28,22 @@ a {
 }
 .heart {
 	color: black;
-	&:hover {
-		animation: fill 0.8s ease-in-out;
-		display: inline-block;
-		opacity: 1;
-		background: linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
-		background-clip: text;
-		-webkit-background-clip: text;
-		color: transparent;
-		font-weight: bold;
+	&:visited, &:active {
+		text-shadow: 0 0 1px #fc9be0a7;
+		cursor: pointer;
 	}			
 }
 
 //<KEYFRAMES ANIMATIONS FOR PAGES>====================================================================================================
+@keyframes heart__hover {
+	from {
+		background-color: transparent;
+
+	}
+	to {
+		background-color:  #ff79da;
+	}
+}
 @keyframes list__drop {
 	0% {
 			opacity: 0;
@@ -99,5 +101,16 @@ a {
 	to {
 		transform: translateX(100%);	
 	}
+}
+@keyframes move__text {
+	0% {
+		max-width: 200%;
+	}
+	50% {
+		max-width: 180%;
+	}
+	100% {
+    max-width: 160%;    
+  }
 }
 //<KEYFRAMES ANIMATIONS>====================================================================================================
