--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -109,7 +109,7 @@
   }
   &__title {
     align-self: center;
-    font-size: 22px;
+    font-size: 28px;
     font-family: $fontFamilyTitle;
   }
 }
@@ -178,6 +178,7 @@
     .list__box-animation {
       display: flex;
       width: 59px;
+      height: 100%;
       grid-row: 1/3;
       grid-column: 3;
       animation-name: slide__check__reverse;
