--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -4,6 +4,7 @@
 $fontFamily: 'Roboto', sans-serif;
 $fontFamilyTitle: 'Shrikhand', cursive;
 $fontSize: 16px;
+$fontSizeBig: 18px;
 $fontSizeTitle: 20px;
 $fontWeightTitle: 700;
 $fontWeightLight: 100;
@@ -22,11 +23,12 @@ $mainColor: #000;
 $darkColor: #9356DC;
 $lightColor: #FF79DA;
 $greenColor: #99E2D0;
-$darkGreenColor:#469e88;
+$darkGreenColor:#008766;
 $whiteColor: #fff;
-$greyColor: #f2f0f0;
-$darkGreyColor: #dddcdc;
-$hoverVioletColor: #d7c3f1;
+$greyColor: #f6f6f6;
+$darkGreyColor: #EAEAEA;
+$hoverVioletColor: #f5edff;
+$shadowColor: #E6E6E6;
 //</VARIABLES>===========================================================================================================
 //<null>===============================================================================================
 @import "null";
@@ -127,6 +129,7 @@ body {
 	}
 	&__text {
 		font-weight: 300;
+		font-size: $fontSizeBig;
 	}
 	&_btn {
 		width: 220px;
@@ -213,7 +216,7 @@ body {
 		display: flex;
 		flex-direction: column;
 		border-radius: 20px;
-		box-shadow: 0px 0px 10px $mainColor;
+		box-shadow: 4px 4px 10px $shadowColor;
 		&:hover {
 			transform: scale(1.02);
 		}					
@@ -233,7 +236,7 @@ body {
 		&__label {
 			margin-right: -92px;
 			grid-column: 2;
-			grid-row: 1/3;
+			grid-row: 1;
 			align-self: center;
 			width: 80px;
 			height: 28px;
@@ -242,6 +245,7 @@ body {
 			display: flex;
 			align-items: center;			
 			justify-content: center;
+			border-radius: 2px;
 		}
 	}
 	&__info {
@@ -251,6 +255,7 @@ body {
   	grid-auto-flow: row;
 		height: 76px;
 		padding-left: 14px;
+		font-size: $fontSizeBig;
 		@media (any-hover: hover) {
       &:hover {
         .heart{
