--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -14,6 +14,7 @@
     align-items: center;
     gap: 0;
     margin: 10px 0 0 0;
+    padding: 0;
   }
 }
 .commander_btn {
@@ -129,9 +130,10 @@
     width: 40px;
     height: 3px;
     background-color: $greenColor;
+    margin-bottom: 6px;
   }
   &__box {
-    margin: 14px 0;
+    margin: 7px 0;
     padding-left: 10px;
     display: grid;
     min-height: 0; 
@@ -164,6 +166,7 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       max-width: 220%;
+      align-self: center;
     }
     &-price {
       grid-column: 3;
