--- a/#src/scss/mixins.scss
+++ b/#src/scss/mixins.scss
@@ -8,27 +8,27 @@
 		font-style: #{$style};
 	}
 }
-//Адаптивное свойство
+//adaptiv-value
 @mixin adaptiv-value($property, $startSize, $minSize, $type) {
 	$addSize: $startSize - $minSize;
 	@if $type==1 {
-		//Только если меньше контейнера
+		//less container
 		#{$property}: $startSize + px;
 		@media (max-width: #{$maxWidthContainer + px}) {
 			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
 		}
 	} @else if $type==2 {
-		//Только если больше контейнера
+		//more container
 		#{$property}: $startSize + px;
 		@media (min-width: #{$maxWidthContainer + px}) {
 			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
 		}
 	} @else {
-		//Всегда
+		//always
 		#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
 	}
 }
-//Адаптивное свойство до
+//before
 @mixin adaptiv-value-to($property, $startSize, $minSize, $minWidth) {
 	$addSize: $startSize - $minSize;
 	//#{$property}: $minSize + px;
