--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -47,8 +47,6 @@ body {
 	overflow: hidden;
 	display: flex;
 	flex-direction: column;
-	&._loaded {
-	}
 }
 //<CONTAINER>===========================================================================================================
 ._container {
@@ -141,7 +139,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 436px;
+	height: 400px;
 	max-width: 370px;
 	width: 100%;
 	row-gap: 20px;
@@ -189,6 +187,12 @@ body {
 }
 
 //==================================================================================================================
+.restaurants {
+	@media (max-width: $md2+px) {
+		background-color: $greyColor;
+		padding: 36px 0 0 0;
+	}
+}
 .resto {
 	display: flex;
 	flex-wrap: wrap;
@@ -217,6 +221,7 @@ body {
 		flex-direction: column;
 		border-radius: 20px;
 		box-shadow: 4px 4px 10px $shadowColor;
+		background-color: $whiteColor;
 		&:hover {
 			transform: scale(1.02);
 		}					
@@ -225,8 +230,11 @@ body {
 		width: 336px;
 		height: 174px;
 		display: grid;
-		grid-template-columns: 244px 92px;
-		grid-template-rows: 58px 58px 58px;
+		grid-template-columns: 3fr 1fr;
+		grid-template-rows: 1fr 1fr 1fr;
+		@media (max-width: $md3+px) {
+			width: auto;
+		}
 		&-img {
 			object-fit: cover;
 			border-radius: 20px 20px 0 0;
@@ -250,8 +258,8 @@ body {
 	}
 	&__info {
 		display: grid;
-		grid-template-columns: 260px 42px;
-  	grid-template-rows: 38px 38px;
+		grid-template-columns: 6fr 1fr;
+  	grid-template-rows: 1fr 1fr;
   	grid-auto-flow: row;
 		height: 76px;
 		padding-left: 14px;
@@ -259,14 +267,23 @@ body {
 		@media (any-hover: hover) {
       &:hover {
         .heart{
-          animation: heart__hover 2s forwards;
+          animation: heart__hover 1s forwards;
           display: inline-block;
           opacity: 1;
           background-clip: text;
           -webkit-background-clip: text;
           color: transparent;
           font-weight: bold;
-        }			
+        }	
+				._heart{
+          animation: heart__border 2s forwards;
+          display: inline-block;
+          opacity: 1;
+          background-clip: text;
+          -webkit-background-clip: text;
+          color: transparent;
+          font-weight: bold;
+        }					
       }
     }
 		&__title {
