--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -76,6 +76,7 @@ body {
 //<main>====================================================================================================
 .page {
 	flex: 1 1 auto;
+	display: grid;
 }
 //===================================================================================================================================
 //</main>====================================================================================================
@@ -207,7 +208,7 @@ body {
 		@media (min-width: $md3+px) {
 			margin: 0 -40px;
 		}		
-		@media (max-width: $md3+px) {
+		@media (max-width: $md2+px) {
 			justify-content: center;
 		}
 	}
@@ -242,10 +243,10 @@ body {
 			grid-row: 1/4;	
 		}
 		&__label {
-			margin-right: -92px;
+			margin-right: 16px;
 			grid-column: 2;
 			grid-row: 1;
-			align-self: center;
+			align-self: end;
 			width: 80px;
 			height: 28px;
 			background-color: $greenColor;
