--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -4,7 +4,7 @@
   justify-self: center;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 40% 20% 40%;
+  grid-template-rows: 1fr 0.2fr 1fr;
   align-items: center;
   margin: 20px 0;
   padding: 20px 0;
