--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -21,6 +21,7 @@ a {
 ._title {
   font-size: $fontSizeTitle;
   font-weight: $fontWeightTitle;
+	line-height: 120%;
 }
 ._heart {
 	font-size: 23px;
