--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -234,7 +234,7 @@ body {
 		grid-template-columns: 3fr 1fr;
 		grid-template-rows: 1fr 1fr 1fr;
 		@media (max-width: $md3+px) {
-			width: auto;
+			width: 100%;
 		}
 		&-img {
 			object-fit: cover;
